everything is working so great

--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -1,6 +1,2 @@
 @import 'navigation',
-        'header',
-        'about',
-        'projects',
-        'contact',
-        'footer';
+        'header';
