--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -282,8 +282,8 @@ html, body {
 
 header {
   min-height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(#55595d)), url("../../data/img/back1.jpeg") no-repeat center;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, #55595d 100%), url("../../data/img/back1.jpeg") no-repeat center;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(#55595d)), url("../data/img/back1.jpeg") no-repeat center;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, #55595d 100%), url("../data/img/back1.jpeg") no-repeat center;
   background-size: cover;
   width: 100%;
   height: 100vh;
@@ -324,795 +324,6 @@ header .home-content p {
   }
   header .home-content p {
     font-size: 2.6em;
-  }
-}
-
-.about {
-  background-color: #37393d;
-  color: #fff;
-  font-family: 'Roboto', sans-serif;
-  padding-bottom: 50%;
-}
-
-.about h1 {
-  padding-top: 40px;
-  color: #ffde59;
-  display: block;
-  margin: 0 auto;
-  width: 80%;
-  padding-bottom: 20px;
-  max-width: 900px;
-}
-
-.about-design {
-  margin: 0 auto;
-  width: 80%;
-  max-width: 900px;
-}
-
-.img-border1 {
-  position: relative;
-  border: 2px solid #fff;
-  width: 70%;
-  height: 190px;
-  margin: 0 auto;
-  max-width: 290px;
-}
-
-.img-border1 img {
-  position: absolute;
-  width: 100%;
-  height: 190px;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
-  -webkit-transition: .25s;
-  transition: .25s;
-  left: 10px;
-  top: 10px;
-}
-
-.img-border1:hover img {
-  filter: none;
-  -webkit-filter: none;
-}
-
-.img-border1:not(:hover) img {
-  -webkit-transition: .7s ease-out;
-  transition: .7s ease-out;
-}
-
-.img-border1::after {
-  border: 2px solid #ffde59;
-  content: "";
-  display: block;
-  position: absolute;
-  top: 20px;
-  left: 15px;
-  right: -20px;
-  bottom: -25px;
-}
-
-.img-border1:hover {
-  -webkit-transition: .5s ease-out;
-  transition: .5s ease-out;
-  border: 2px solid #ffde59;
-}
-
-.img-border1:hover::after {
-  -webkit-transition: .5s ease-out;
-  transition: .5s ease-out;
-  border: 2px solid #fff;
-}
-
-.img-border1:not(:hover) {
-  -webkit-transition: .7s ease-out;
-  transition: .7s ease-out;
-}
-
-.img-border1:not(:hover)::after {
-  -webkit-transition: .7s ease-out;
-  transition: .7s ease-out;
-}
-
-@media (max-width: 320px) {
-  .img-border1 {
-    width: 90%;
-    height: 200px;
-  }
-  .img-border1 img {
-    width: 100%;
-    height: 200px;
-  }
-}
-
-.about-content p {
-  margin-bottom: 10px;
-  padding-top: 10px;
-}
-
-.about-content p:nth-child(5) {
-  margin-bottom: 30px;
-}
-
-.lang {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (130px)[2];
-      grid-template-columns: repeat(2, 130px);
-  margin-bottom: 40px;
-}
-
-.wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.wrap li {
-  padding-left: 10px;
-  margin-bottom: 10px;
-}
-
-.jquery-img {
-  width: 9%;
-  margin-bottom: 10px;
-}
-
-.fa-sass {
-  font-size: 0.8em;
-}
-
-@media (min-width: 768px) {
-  .about {
-    padding-bottom: 30%;
-  }
-  .about h1 {
-    font-size: 1.6em;
-    padding-top: 15%;
-    padding-bottom: 40px;
-  }
-  .about-content p {
-    font-size: 1.2em;
-  }
-  .img-border1 {
-    width: 40%;
-    height: 220px;
-  }
-  .img-border1 img {
-    height: 220px;
-  }
-  .lang {
-    -ms-grid-columns: (160px)[2];
-        grid-template-columns: repeat(2, 160px);
-    margin-bottom: 50px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .about {
-    padding-bottom: 20%;
-  }
-  .about h1 {
-    padding-top: 8%;
-    width: 60%;
-    padding-bottom: 30px;
-    min-width: 900px;
-  }
-  .about-design {
-    width: 60%;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 2fr 1fr;
-        grid-template-columns: 2fr 1fr;
-    -webkit-column-gap: 20px;
-            column-gap: 20px;
-    min-width: 900px;
-  }
-  .img-border1 {
-    width: 100%;
-    height: 260px;
-  }
-  .img-border1 img {
-    width: 100%;
-    height: 260px;
-  }
-  .about-content p {
-    font-size: 1em;
-  }
-  .lang {
-    -ms-grid-columns: (150px)[3];
-        grid-template-columns: repeat(3, 150px);
-    margin-bottom: 0px;
-  }
-}
-
-/* Portfolio Section */
-.portfolio {
-  background-color: #37393d;
-  position: relative;
-  padding-bottom: 50px;
-}
-
-.portfolio h1 {
-  text-align: center;
-  padding: 30px 0;
-  font-family: 'Bebas Neue', cursive;
-  color: #37393d;
-  font-size: 2.2em;
-  background-color: #ffde59;
-  letter-spacing: 1px;
-}
-
-.projects {
-  width: 70%;
-  margin: 0 auto;
-  margin-top: 30%;
-  max-width: 1250px;
-}
-
-.projects .project-borders {
-  position: relative;
-  border: 2px solid #ffde59;
-  height: 210px;
-  margin-bottom: 30%;
-  max-width: 330px;
-}
-
-.projects .project-borders img {
-  width: 100%;
-  height: 210px;
-  cursor: pointer;
-  position: absolute;
-  left: 10px;
-  top: 10px;
-}
-
-.projects .project-borders::before {
-  position: absolute;
-  border: 2px solid #fff;
-  content: "";
-  display: block;
-  top: 25px;
-  left: 25px;
-  right: -20px;
-  bottom: -20px;
-}
-
-.projects .project-borders:hover::before {
-  -webkit-transition: .5s ease-out;
-  transition: .5s ease-out;
-  border: 2px solid #ffde59;
-}
-
-.projects .project-borders:not(:hover)::before {
-  -webkit-transition: .5s ease-out;
-  transition: .5s ease-out;
-}
-
-.projects .project-borders:hover {
-  -webkit-transition: .5s ease-out;
-  transition: .5s ease-out;
-  border: 2px solid #fff;
-}
-
-.projects .project-borders:not(:hover) {
-  -webkit-transition: .5s ease-out;
-  transition: .5s ease-out;
-}
-
-.projects .project-borders .project-overlay {
-  position: absolute;
-  left: 10px;
-  top: 10px;
-  bottom: 0;
-  -webkit-transition: .5s;
-  transition: .5s;
-  background-color: #ffde59;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-}
-
-.projects .project-borders .project-overlay p {
-  position: absolute;
-  font-size: 20px;
-  font-family: 'Roboto', sans-serif;
-  top: 45%;
-  width: 100%;
-  text-align: center;
-  color: #000;
-  -webkit-transition: .5s;
-  transition: .5s;
-  opacity: 0;
-}
-
-.projects .project-borders:hover .project-overlay {
-  cursor: pointer;
-  opacity: 1;
-  z-index: 1;
-}
-
-.projects .project-borders:hover .project-overlay p {
-  cursor: pointer;
-  display: block;
-  opacity: 1;
-  z-index: 1;
-}
-
-@media (max-width: 320px) {
-  .projects {
-    width: 80%;
-  }
-}
-
-#mask {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 2;
-}
-
-.project-card {
-  width: 80%;
-  margin: 0 auto;
-  position: relative;
-  position: fixed;
-  top: 15%;
-  left: 10%;
-  z-index: 3;
-}
-
-.project-card .fa-times {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 1.5em;
-  border: none;
-  color: #ffde59;
-  cursor: pointer;
-  z-index: 1;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-.overlay {
-  width: 100%;
-  height: auto;
-  -webkit-box-shadow: 0px 0px 10px 1px black;
-          box-shadow: 0px 0px 10px 1px black;
-}
-
-.overlay img {
-  width: 100%;
-  height: 180px;
-  display: block;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-
-.overlay-content {
-  background-color: #37393d;
-  position: relative;
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  padding-left: 15px;
-  padding-top: 10px;
-  padding-right: 15px;
-  font-family: 'Roboto', sans-serif;
-}
-
-.overlay-content h2 {
-  color: #ffde59;
-  font-size: 1.3em;
-  padding-top: 10px;
-  margin-bottom: 20px;
-}
-
-.overlay-content p {
-  color: #fff;
-}
-
-.code-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 30px;
-  padding-bottom: 30px;
-}
-
-.code-links li + li {
-  margin-left: 10%;
-}
-
-.code-links a {
-  background-color: #ffde59;
-  padding: 5px 10px 5px 10px;
-  color: #37393d;
-  border-radius: 5px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.code-links a:hover {
-  background-color: #fff;
-}
-
-.hidden {
-  display: none;
-}
-
-/* transisation for modal */
-.projectsWrapper.mOpen {
-  transform: scale(0.9);
-  -webkit-transform: scale(0.9);
-  -moz-transform: scale(0.9);
-  -ms-transform: scale(0.9);
-  -o-transform: scale(0.9);
-}
-
-#mask {
-  transform: translateY(0);
-  display: none !important;
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  -o-transform: translateY(0);
-}
-
-.project-card {
-  display: block !important;
-  transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-  transform: translateY(500%);
-  -webkit-transform: translateY(500%);
-  -moz-transform: translateY(500%);
-  -ms-transform: translateY(500%);
-  -o-transform: translateY(500%);
-  -webkit-transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-  -moz-transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-  -ms-transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-  -o-transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-.project-card.show {
-  transform: translateY(0);
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  -o-transform: translateY(0);
-}
-
-.projectsWrapper {
-  transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-  -webkit-transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-  -moz-transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-  -ms-transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-  -o-transition: 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-@media (min-width: 768px) {
-  .projects {
-    width: 90%;
-    margin-top: 15%;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -webkit-column-gap: 50px;
-            column-gap: 50px;
-  }
-  .project-card {
-    top: 30%;
-  }
-  .overlay {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-  .overlay img {
-    height: 240px;
-  }
-  .overlay .img-adjustment {
-    height: 260px;
-  }
-  .code-links li + li {
-    margin-left: 20%;
-  }
-}
-
-@media (min-width: 1024px) {
-  .portfolio {
-    padding-bottom: 10%;
-  }
-  .projects {
-    width: 80%;
-    margin-top: 10%;
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-    -webkit-column-gap: 50px;
-            column-gap: 50px;
-    min-width: 900px;
-  }
-  .projects .project-borders {
-    height: 210px;
-    margin-bottom: 20%;
-  }
-  .projects .project-borders img {
-    height: 206px;
-  }
-  .overlay img {
-    min-height: 100%;
-  }
-  .project-card {
-    width: 50%;
-    left: 25%;
-  }
-  .code-links {
-    margin-top: 40px;
-  }
-  .code-links li + li {
-    margin-left: 15%;
-  }
-  .code-links a {
-    padding: 10px 20px 10px 20px;
-  }
-}
-
-.contact {
-  background-color: #37393d;
-  text-align: center;
-  padding-bottom: 40px;
-}
-
-.contact h1 {
-  padding: 30px 0;
-  background-color: #ffde59;
-  color: #37393d;
-  font-family: 'Bebas Neue', cursive;
-  font-size: 2em;
-  letter-spacing: 2px;
-}
-
-.contact-text {
-  padding-top: 20%;
-  width: 80%;
-  margin: 0 auto;
-  color: #fff;
-  text-align: left;
-  font-family: 'Roboto', sans-serif;
-  margin-bottom: 40px;
-  font-size: 1.2em;
-}
-
-.contact-text p:nth-child(1) {
-  margin-bottom: 20px;
-}
-
-.email {
-  display: block;
-  padding: 20px 10px;
-  background-color: #37393d;
-  color: #ffde59;
-  width: 50%;
-  margin-bottom: 15%;
-  border-radius: 5px;
-  -webkit-transition: -webkit-transform 0.3s ease-out;
-  transition: -webkit-transform 0.3s ease-out;
-  transition: transform 0.3s ease-out;
-  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-  font-family: 'Roboto', sans-serif;
-  font-size: 1.2em;
-  position: relative;
-  display: inline-block;
-  padding: 1em 2em;
-  cursor: pointer;
-  overflow: hidden;
-  min-width: 10%;
-}
-
-.email:before, .email:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  height: 3px;
-  width: 100%;
-  background-color: #fff;
-}
-
-.email:before {
-  top: 0;
-}
-
-.email:after {
-  bottom: 0;
-}
-
-.email:hover > * > *:before, .email:hover > * > *:after {
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-}
-
-.email:hover > * > * > *:before, .email:hover > * > * > *:after {
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-}
-
-.email > *:before, .email > *:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 3px;
-  background-color: #fff;
-}
-
-.email > *:before {
-  left: 0;
-}
-
-.email > *:after {
-  right: 0;
-}
-
-.email > * > *:before, .email > * > *:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  z-index: 9;
-  height: 3px;
-  width: 100%;
-  background-color: #ffde59;
-}
-
-.email > * > *:before {
-  top: 0;
-  -webkit-transform: translate3d(-105%, 0, 0);
-          transform: translate3d(-105%, 0, 0);
-  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.email > * > *:after {
-  bottom: 0;
-  -webkit-transform: translate3d(105%, 0, 0);
-          transform: translate3d(105%, 0, 0);
-  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.email > * > * > *:before, .email > * > * > *:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  z-index: 9;
-  height: 100%;
-  width: 3px;
-  background-color: #ffde59;
-}
-
-.email > * > * > *:before {
-  left: 0;
-  -webkit-transform: translate3d(0, 105%, 0);
-          transform: translate3d(0, 105%, 0);
-  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.email > * > * > *:after {
-  right: 0;
-  -webkit-transform: translate3d(0, -105%, 0);
-          transform: translate3d(0, -105%, 0);
-  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 0.8s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.8s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  width: 60%;
-  margin: 0 auto;
-}
-
-.socials > a {
-  color: #fff;
-  -webkit-transition: -webkit-transform 0.3s ease-in-out;
-  transition: -webkit-transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-  font-size: 1.4em;
-}
-
-.socials > a:hover {
-  -webkit-transform: translateY(-5px);
-          transform: translateY(-5px);
-}
-
-@media (min-width: 768px) {
-  .contact {
-    padding-bottom: 60px;
-  }
-  .contact-text {
-    padding-top: 10%;
-    width: 60%;
-    text-align: center;
-  }
-  .email {
-    width: 25%;
-    margin-bottom: 15%;
-  }
-  .socials {
-    width: 30%;
-  }
-}
-
-@media (min-width: 1024px) {
-  .contact {
-    padding-bottom: 6%;
-  }
-  .contact-text {
-    padding-top: 8%;
-  }
-  .email {
-    width: 12%;
-    margin-bottom: 10%;
-  }
-  .socials {
-    width: 15%;
-  }
-}
-
-.footer {
-  text-align: center;
-  background-color: #ffde59;
-  padding-bottom: 40px;
-}
-
-.footer .page-scroll {
-  padding-top: 60px;
-  margin-bottom: 30px;
-}
-
-.footer .page-scroll img {
-  width: 15%;
-}
-
-.copyright {
-  font-family: 'Roboto', sans-serif;
-}
-
-@media (min-width: 768px) {
-  .footer .page-scroll img {
-    width: 8%;
-  }
-  .copyright {
-    font-size: 1.2em;
-  }
-}
-
-@media (min-width: 1024px) {
-  .footer .page-scroll img {
-    width: 3%;
-  }
-  .copyright {
-    font-size: 1em;
   }
 }
 /*# sourceMappingURL=main.css.map */
