--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 header{
     min-height: 100%;
      background: linear-gradient(180deg, rgba(0,0,0,0.5) 0%, rgba(85,89,93,1) 100%),
-                 url('../../data/img/back1.jpeg') no-repeat center;
+                 url('../data/img/back1.jpeg') no-repeat center;
     background-size: cover;
     width: 100%;
     height: 100vh;
