Project completed accept favicon issue

--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -1,2 +1,6 @@
 @import 'navigation',
-        'header';
+        'header',
+        'about',
+        'contact',
+        'footer',
+        'projects';
