--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -34,7 +34,7 @@
         position: absolute;
         width: 100%;
         height: 190px;
-        filter: grayscale(100%);
+        //filter: grayscale(100%);
         transition: .25s;
         left: 10px;
         top: 10px;
