react skill added

--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -112,7 +112,9 @@
         padding-left: 10px;
         margin-bottom: 10px;
     }
-
+    .li-react{
+        padding-left: 8px;
+    }
 }
 .webpack-img{
     width: 11%;
