New Project added, Changes in skills section, Home and About

--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -116,18 +116,22 @@
         padding-left: 8px;
     }
 }
-.webpack-img{
+.mongodb-img{
     width: 11%;
     margin-bottom: 10px;
 }
-
-.jquery-img{
-    width: 9%;
+.expressjs-img{
+    width: 11%;
+    margin-bottom: 10px;
+    fill: #fff;
+}
+.styled-components-img{
+    width: 11%;
     margin-bottom: 10px;
 }
-.fa-sass{
-    font-size: 0.8em;
-}
+// .fa-sass{
+//     font-size: 0.8em;
+// }
 
 @media (min-width: 768px){
 
