--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -363,8 +363,6 @@ header .home-content p {
   position: absolute;
   width: 100%;
   height: 190px;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
   -webkit-transition: .25s;
   transition: .25s;
   left: 10px;
@@ -453,18 +451,24 @@ header .home-content p {
   margin-bottom: 10px;
 }
 
-.webpack-img {
+.wrap .li-react {
+  padding-left: 8px;
+}
+
+.mongodb-img {
   width: 11%;
   margin-bottom: 10px;
 }
 
-.jquery-img {
-  width: 9%;
+.expressjs-img {
+  width: 11%;
   margin-bottom: 10px;
+  fill: #fff;
 }
 
-.fa-sass {
-  font-size: 0.8em;
+.styled-components-img {
+  width: 11%;
+  margin-bottom: 10px;
 }
 
 @media (min-width: 768px) {
@@ -738,10 +742,10 @@ header .home-content p {
   }
   .email {
     width: 12%;
-    margin-bottom: 10%;
+    margin-bottom: 9%;
   }
   .socials {
-    width: 15%;
+    width: 17%;
   }
 }
 
@@ -973,6 +977,10 @@ header .home-content p {
 
 .overlay-content p {
   color: #fff;
+}
+
+.overlay-content p span {
+  color: #ffde59;
 }
 
 .code-links {
